@@ -1,15 +1,15 @@
 #!/bin/sh
 
 #Fix these valuables for your environment
-VERSION=2.1.2
+VERSION=2.1.3
 #BETA=-beta7
-DISTRO=cos5
+DISTRO=fc6
 SVNROOT=~/seedit.sourceforge/trunk/
 RPMROOT=~/rpm
 
 #Followign values differs from distro
 #For, cos4, ax2, fc6 , they are configured later
-SAMPLE_POLICY_TYPE=cos5
+SAMPLE_POLICY_TYPE=fc6
 AUDITCONF=\\%\\{_sysconfdir\\}\\/audit\\/audit.rules
 #AUDITCONF=\\%\\{_sysconfdir\\}\\/audit.rules
 MODULAR=y
